99 part 17 (refactor)